# TelegramAI

./: .coveragerc  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc  CLAUDE.md  Dockerfile.dev  PROJECT_STATUS_REPORT.md  README.md  commitlint.config.js  docker-compose.dev.yml  eslint.config.js  jest.config.js  package.json  performance.config.js  pyproject.toml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
backend/telegram_ai/ai/: generator.py
backend/telegram_ai/ai/claude_code/: __init__.py  context.py  monitoring.py  permissions.py  sdk.py  tools.py  types.py
docker/nginx/: dev.conf
docker/prometheus/: prometheus.yml
docs/: API.md  CLAUDE_CODE_INTEGRATION.md  DEPLOYMENT.md  DEVELOPMENT.md  TelegramAI_需求文档.md
examples/: basic-usage.md
frontend/electron/: claude-ipc-handler.js  preload.js
frontend/src/components/: ClaudeCodeConfig.vue
frontend/src/services/claude-code/: index.ts  query.ts  tools.ts  types.ts
frontend/src/services/ipc/: claude-bridge.ts
frontend/src/stores/: claude-permissions.ts
scripts/: build.sh  deploy.sh  performance-test.sh  setup-dev.sh
tasks/: todo.md
templates/: component.vue.template  python_service.py.template  service.ts.template
tests/: test_claude_code_integration.py
